--- a/Complete Code/stock/pom.xml
+++ b/Complete Code/stock/pom.xml
@@ -46,6 +46,11 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+    	<groupId>org.seleniumhq.selenium</groupId>
+    		<artifactId>selenium-java</artifactId>
+    		<version>4.1.0</version>
+  		</dependency>
 	</dependencies>
 
 	<build>
