Migração para servidor de banco de dados local

--- a/Complete Code/stock/src/main/resources/application.properties
+++ b/Complete Code/stock/src/main/resources/application.properties
@@ -1,7 +1,7 @@
-spring.datasource.username = sql10595323
+spring.datasource.username = wesley
 
-spring.datasource.password = ufg5EsXPQY
+spring.datasource.password = mysql
 
-spring.datasource.url = jdbc:mysql://sql10.freesqldatabase.com:3306/sql10595323
+spring.datasource.url = jdbc:mysql://localhost:3306/mydb
 
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL8Dialect
